# footballmanager

./: README.md  pyproject.toml  pytest.ini  settings.ini  test.py
_proc/: 00_core.ipynb  00_models.ipynb  01_ExportManager.ipynb  99_tools.ipynb  README.md  index.ipynb
analysis/: domains.py  index.py
footballmanager/: ExportManager.py  _modidx.py  core.py  io.py  models.py
footballmanager/analysis/: domains.py  index.py
footballmanager/tests/: test_index.py  test_io.py  test_player_search.csv  test_player_search.html
io/: local.py  parsers.py  tools.py
nbs/: 00_models.ipynb  01_ExportManager.ipynb  99_tools.ipynb  index.ipynb  nbdev.yml  sidebar.yml
rpa/: PlayFM.py  actions.py
