[tool.poetry]
name = "footballmanager"
version = "0.1.0"
description = "Package for managing data exports, analysis, and rpa testing for the series FootballManager"
authors = ["Ty Kirchmann"]
packages = [
    { include = "fooballmanager" }
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"
pytest = "^7.4.3"
lxml = "^4.9.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
